Corrected error in the htdocs path.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,6 +7,6 @@
 <body>
 This is my First Official Website!!<br>
 Shooting for the clouds!!!<br>
-Please.....Help!!!
+Please.....Help!!!!
 </body>
 </html>
