Added F and Z layout files

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,11 +2,196 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The ***Internet History</title>
+    <title>zpage</title>
+    <meta name="description" content="This is an example of a meta description.
+    This will often show up in search results.">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <!-- COMMENT IN HTML -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <style>
+        header, aside, main, footer, menu{
+            /* border: 1px solid black; */
+            padding: 5px;
+        }
+
+        header {
+            width: 67%;
+            float: left;
+            text-align: center;
+        }
+
+        menu {
+            float: right;
+            margin-top: auto;
+            width: 33%;
+
+        }
+        menu li {
+            display: inline-block;
+            margin-top: 30px;
+            padding: 10px;
+            }
+
+        header, menu {
+            box-sizing: border-box;
+            height: 100px;
+        }
+
+        #wrapper{
+            width: 80%;
+            min-width: 350px;
+            max-width: 1100px;
+            margin-left: auto;
+            margin-right: auto;
+            background-color: aliceblue;
+        }
+
+        aside{
+            width:16%;
+            box-sizing: border-box;
+            float: left;
+            display: inline-block;
+            /* height: 300px; */
+            padding-bottom: 20px;
+        }
+        aside img {
+            margin: 0;
+
+            width: 80%;
+        }
+
+        main img {
+            width: 80%;
+            margin-right: auto;
+            margin-left: 10%;
+        }
+        main h2 {
+            margin-left: 10%;
+            margin-bottom: 10px;
+        }
+
+        main{
+            width: 100%;
+            float: left;
+            box-sizing: border-box;
+        }
+
+        footer{
+            Clear: both;
+        }
+
+        footer>span {
+            font-size: 0.8em;
+            font-style: italic;
+            width: 33%;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+            display: inline-block;
+        }
+
+        h1 {
+
+        }
+        h2 {
+            margin: 0;
+        }
+        h3 {
+            margin: 0;
+        }
+
+        section {
+            box-sizing: border-box;
+            width: 100%;
+            padding: 5px;
+            float: left; /* if widths are made smaller (eg 33%) then they will float into columns */
+        }
+        #section1 img {
+            border: 10px solid gray;
+
+        }
+
+
+
+    </style>
+
 </head>
 <body>
-This is my First Official Website!!<br>
-Shooting for the clouds!!!<br>
-Please.....Help!!!!
+    <div id="wrapper">
+        <header>
+            <h1>The History of the Internet</h1>
+        </header>
+        <menu>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="index.html">Z-Page</a></li>
+            <li><a href="fpage.html">F-Page</a></li>
+        </menu>
+        <main>
+            <section id="section1">
+                <h2>Explore The Interesting and Exciting History Of The Internet</h2>
+                <img src="images/collage.JPG" alt="This is a sample picture"/>
+                <div>
+
+                </div>
+            </section>
+        </main>
+        <aside>
+            <h3>Pre Internet</h3>
+            <img src="images/mainframe.JPG" alt="This is a splash"/>
+            <div>
+                <a href="fpage.html">See what life was like before the internet.</a>
+            </div>
+        </aside>
+        <aside>
+            <h3>Arpa-net</h3>
+            <img src="images/arpanet1972.JPG" alt="This is a arpanet"/>
+            <div>
+                <a href="fpage.html">The exciting beginning of the Internet!</a>
+            </div>
+        </aside>
+        <aside>
+            <h3>Early Internet</h3>
+            <img src="images/dialupModem.JPG" alt="This is a early internet"/>
+            <div>
+                <a href="fpage.html">Wow! Dial-up Modems!</a>
+            </div>
+        </aside>
+        <aside>
+            <h3>Browsers and Search</h3>
+            <img src="images/mosaicBrowser.JPG" alt="This is a browser"/>
+            <div>
+                <a href="fpage.html">What good's the internet without browsers and search engines!</a>
+            </div>
+        </aside>
+        <aside>
+            <h3>Social Media</h3>
+            <img src="images/myspace.JPG" alt="This is a social media"/>
+            <div>
+                <a href="fpage.html">No need to leave your house to be sociable!</a>
+            </div>
+        </aside>
+        <aside>
+            <h3>E-Commerce</h3>
+            <img src="images/earlyamazon.JPG" alt="This is a amazon"/>
+            <div>
+                <a href="fpage.html">Well now no need to leave the house at all...except for work (not anymore)!</a>
+            </div>
+        </aside>
+        <footer>
+            <span>
+                Copyright
+            </span>
+            <span>
+                Wiki Link
+            </span>
+            <span>
+                Article Download link
+            </span>
+
+        </footer>
+    </div>
 </body>
 </html>
