--- a/public_html/index.html
+++ b/public_html/index.html
@@ -50,7 +50,7 @@
             height: 7vw;
             margin-bottom: 0;
             background-color: blue;
-            padding: .2vw;
+
         }
 
         #heading {
@@ -62,6 +62,10 @@
             background-color: blanchedalmond;
             font-size: 1.7vw;
             margin-top: 7vw;
+        }
+
+        #heading h2 {
+            margin-top: 1vw;
         }
 
         #wrapper{
@@ -77,7 +81,7 @@
             width: 100%;
             float: left;
             box-sizing: border-box;
-            margin-top: 7vw;
+            margin-top: 1vw;
             padding: .2vw;
         }
 
@@ -92,16 +96,16 @@
         }
 
         aside{
-            width:16%;
+            width:15.5%;
             box-sizing: border-box;
 
             display: inline-block;
             /* height: 300px; */
             margin-top: .2vw;
-            /* margin-left: 1vw;
-            margin-right: 1vw; */
-            padding: .2vw;
-            margin-left: .1vw;
+            margin-left: .2vw;
+            /* margin-right: 1vw;
+
+            margin-left: calc(-2px + .1vw);*/
             margin-right: auto;
             vertical-align: top;
 
@@ -113,6 +117,20 @@
             width: 100%;
         }
 
+        aside h3 {
+            font-size: calc(8px + .8vw);
+        }
+
+        aside a {
+            font-size: 1vw;
+        }
+        aside:first-child {
+            margin-left: 1vw;
+        }
+        #aside1 {
+            margin-left: 1vw;
+        }
+
         footer{
             Clear: both;
             height: 2vw;
@@ -122,7 +140,6 @@
         }
 
         footer>span {
-            font-size: 0.8em;
             font-style: italic;
             width: 33%;
             margin-left: auto;
@@ -171,12 +188,9 @@
         <main>
             <section id="section1">
                 <img src="images/collage.JPG" alt="This is a sample picture"/>
-                <div>
-                    Say Something
-                </div>
             </section>
         </main>
-        <aside>
+        <aside id="aside1">
             <h3>Pre Internet</h3>
             <img src="images/mainframe.JPG" alt="This is a splash"/>
             <div>
