Added "hover" copyright info for pictures Some content added for Pre-Internet Page Added Titles for index and Pre-Internet pages Changed f-page filename to pre-internet.html

--- a/public_html/about.html
+++ b/public_html/about.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
+
+    <style>
+        a {
+            margin:20px;
+        }
+    </style>
 </head>
 <body>
 <header><h1>About Internet History</h1></header>
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About</a></li>
-<li><a href="index.html">Z-Page</a></li>
-<li><a href="fpage.html">F-Page</a></li>
-
-
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="pre-internet.html">Pre-Internet</a>
+    <a href="index.html">Z-Page</a>
 </body>
 </html>
