--- a/public_html/pre-internet.html
+++ b/public_html/pre-internet.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>fpage</title>
+    <title>Pre-Internet</title>
     <meta name="description" content="This is an example of a meta description.
     This will often show up in search results.">
 
@@ -22,8 +22,8 @@
     <menu>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="pre-internet.html">Pre-Internet</a></li>
         <li><a href="index.html">Z-Page</a></li>
-        <li><a href="fpage.html">F-Page</a></li>
     </menu>
     <div id="heading">
         <h2>Pre-Internet: The Pioneers of Computing That Enabled The Internet</h2>
@@ -31,36 +31,39 @@
     <div id="wrapper">
         <main>
             <section id="section1">
-                <h2>Section 1</h2>
-                <img src="images/maskedPeople.JPG" alt="This is a sample picture"/>
+                <h2>Computers</h2>
+                <div class="hoverwrap">
+                    <img src="images/mainframe.JPG" alt="This is a picture of a mainframe computer"/>
+                    <div class="hovermsg"><a href="https://www.flickr.com/photos/9479603@N02/49755349401">"Mainframe Computer 1960"</a> by <a href="https://www.flickr.com/photos/9479603@N02"> PanelSwitchman</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                </div>
                 <div class="sectionText">
-                    The history of the Internet has its origin in the efforts to build and interconnect computer networks that arose from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
-                    The history of the Internet has its origin in the efforts to build and interconnect computer networks that arose from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
-                    The history of the Internet has its origin in the efforts to build and interconnect computer networks that arose from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
+                    In the early days of computers, computers were not envisioned to communicate. They were thought to be standalone systems.
+                    J. C. R. Licklider changed this. He envisioned the seminal ideas behind the internet in the 1950s, long before it was technically possible. His vision foretold of graphical computing, point-and-click interfaces, digital libraries, e-commerce, online banking, networked computers with easy user interfaces. These were bold ideas, but it would be years before computers were advanced enough to realize these dreams.
+                    Licklider joined ARPA in 1962.
                 </div>
             </section>
             <section id="section2">
-                <h2>Section 2</h2>
-                <img src="images/maskedPeople.JPG" alt="This is a sample picture"/>
+                <h2>Sputnik and the Soviet Threat</h2>
+                <div class="hoverwrap">
+                    <img src="images/mainframe.JPG" alt="This is a picture of a mainframe computer"/>
+                    <div class="hovermsg"><a href="https://www.flickr.com/photos/9479603@N02/49755349401">"Mainframe Computer 1960"</a> by <a href="https://www.flickr.com/photos/9479603@N02"> PanelSwitchman</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                </div>
                 <div class="sectionText">
-                    The history of the Internet has its origin in the efforts to build and interconnect computer networks that arose from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
-                    The history of the Internet has its origin in the efforts to build and interconnect computer networks that arose from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
+                    <p>In 1957 soviets launched Sputnik, which showed their technical superiority.
+                        This scared President Eisenhower. To catch up, president Eisenhower created ARPA Advanced Research Projects Agency in 1958.</p>
+                    <p>Telephone system used centralized hard connections, which could easily be disabled by a bomb taking out a key switch-point. Without communications the United States could not retaliate.</p>
                 </div>
             </section>
             <section id="section3">
-                <h2>Section 3</h2>
-                <img src="images/maskedPeople.JPG" alt="This is a sample picture"/>
-                <div class="sectionText">
-                    The history of the Internet has its origin in the efforts to build and interconnect computer networks that arose from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
-                    The history of the Internet has its origin in the efforts to build and interconnect computer networks that arose from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
+                <h2>Critical building blocks of networking</h2>
+                <div class="hoverwrap">
+                    <img src="images/mainframe.JPG" alt="This is a picture of a mainframe computer"/>
+                    <div class="hovermsg"><a href="https://www.flickr.com/photos/9479603@N02/49755349401">"Mainframe Computer 1960"</a> by <a href="https://www.flickr.com/photos/9479603@N02"> PanelSwitchman</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
-            </section>
-            <section id="section4">
-                <h2>Section 4</h2>
-                <img src="images/maskedPeople.JPG" alt="This is a sample picture"/>
                 <div class="sectionText">
-                    The history of the Internet has its origin in the efforts to build and interconnect computer networks that arose from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
-                    The history of the Internet has its origin in the efforts to build and interconnect computer networks that arose from research and development in the United States and involved international collaboration, particularly with researchers in the United Kingdom and France.
+                    <p>Lenard Kleinrock - MIT – Adapted Queuing theory to electronic messages and used Demand Access and Distributed Control in his design. He received the National Medal of Honor for his work.</p>
+                    <p>Donald Davies, was a Welsh computer scientist who was employed at the UK National Physical Laboratory who in 1965 he conceived of packet switching.</p>
+                    <p>Around the same time Paul Baran – a researcher at RAND, took on the task of designing a "survivable" communications system. He conceived of a robust communications network using “redundancy” and “digital” technology. Paul invented packet switching techniques that played a key role in the development of the internet.</p>
                 </div>
             </section>
         </main>
