--- a/public_html/test.html
+++ b/public_html/test.html
@@ -5,8 +5,7 @@
     <title>Index</title>
     <meta name="description" content="This is an example of a meta description.
     This will often show up in search results.">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
     <!-- COMMENT IN HTML -->
     <link rel="stylesheet" href="css/style.css">
 
@@ -116,7 +115,7 @@
         <menu>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="fpage.html">F-Page</a></li>
+            <li><a href="pre-internet.html">F-Page</a></li>
             <li><a href="index.html">Z-Page</a></li>
         </menu>
         <aside>
