--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>zpage</title>
+    <title>Internet History</title>
     <meta name="description" content="This is an example of a meta description.
     This will often show up in search results.">
     <!-- COMMENT IN HTML -->
@@ -178,8 +178,8 @@
     <menu>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="pre-internet.html">Pre-Internet</a></li>
         <li><a href="index.html">Z-Page</a></li>
-        <li><a href="fpage.html">F-Page</a></li>
     </menu>
     <div id ="heading">
         <h2>Explore The Interesting and Exciting History Of The Internet</h2>
@@ -194,42 +194,42 @@
             <h3>Pre Internet</h3>
             <img src="images/mainframe.JPG" alt="This is a splash"/>
             <div>
-                <a href="fpage.html">See what life was like before the internet.</a>
+                <a href="pre-internet.html">What was the motivation for the internet?</a>
             </div>
         </aside>
         <aside>
             <h3>Arpa-net</h3>
             <img src="images/arpanet1972.JPG" alt="This is a arpanet"/>
             <div>
-                <a href="fpage.html">The exciting beginning of the Internet!</a>
+                <a href="pre-internet.html">The exciting beginning of the Internet!</a>
             </div>
         </aside>
         <aside>
             <h3>Early Internet</h3>
             <img src="images/dialupModem.JPG" alt="This is a early internet"/>
             <div>
-                <a href="fpage.html">Wow! Dial-up Modems!</a>
+                <a href="pre-internet.html">Wow! Dial-up Modems!</a>
             </div>
         </aside>
         <aside>
             <h3>Browsers and Search</h3>
             <img src="images/mosaicBrowser.JPG" alt="This is a browser"/>
             <div>
-                <a href="fpage.html">What good's the internet without browsers and search engines!</a>
+                <a href="pre-internet.html">What good's the internet without browsers and search engines!</a>
             </div>
         </aside>
         <aside>
             <h3>Social Media</h3>
             <img src="images/myspace.JPG" alt="This is a social media"/>
             <div>
-                <a href="fpage.html">No need to leave your house to be sociable!</a>
+                <a href="pre-internet.html">No need to leave your house to be sociable!</a>
             </div>
         </aside>
         <aside>
             <h3>E-Commerce</h3>
             <img src="images/earlyamazon.JPG" alt="This is a amazon"/>
             <div>
-                <a href="fpage.html">Well now no need to leave the house at all...except for work (not anymore)!</a>
+                <a href="pre-internet.html">Well now no need to leave the house at all...except for work (not anymore)!</a>
             </div>
         </aside>
         <footer>
