--- a/public_html/about.html
+++ b/public_html/about.html
@@ -15,6 +15,6 @@
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="pre-internet.html">Pre-Internet</a>
-    <a href="index.html">Z-Page</a>
+    <a href="arpa-net.html">ARPA-NET</a>>
 </body>
 </html>
