--- a/public_html/arpa-net.html
+++ b/public_html/arpa-net.html
@@ -18,32 +18,39 @@
         <li><a href="arpa-net.html">ARPA-NET</a></li>
     </menu>
     <div id="heading">
-        <h2>Pre-Internet: The Pioneers of Computing That Enabled The Internet</h2>
+        <h2>ARPA-NET: The Beginnings of The Internet</h2>
     </div>
     <div id="wrapper">
         <main>
             <section id="section1">
-                <h2>Computers</h2>
+                <h2>ARPA-NET</h2>
                 <div class="hoverwrap">
-                    <img src="images/mainframe.JPG" alt="This is a picture of a mainframe computer"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/9479603@N02/49755349401">"Mainframe Computer 1960"</a> by <a href="https://www.flickr.com/photos/9479603@N02"> PanelSwitchman</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                    <img src="images/arpanet1973_cc.JPG" alt="This is a picture of ARPA NET"/>
+                    <div class="hovermsg"><a href="https://www.flickr.com/photos/24431382@N03/7257339850">"Arpanet Geographical Map in 1973 (1988)"</a> by <a href="https://www.flickr.com/photos/24431382@N03">Eric Fisher</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
                 <div class="sectionText">
-                    In the early days of computers, computers were not envisioned to communicate. They were thought to be standalone systems.
-                    J. C. R. Licklider changed this. He envisioned the seminal ideas behind the internet in the 1950s, long before it was technically possible. His vision foretold of graphical computing, point-and-click interfaces, digital libraries, e-commerce, online banking, networked computers with easy user interfaces. These were bold ideas, but it would be years before computers were advanced enough to realize these dreams.
-                    Licklider joined ARPA in 1962.
+                    Bob Taylor – ARPA – 1966 – Wanted to build a network among the 3 computers across the country that he had to work with so that he could communicate with all 3 with one terminal.  In 1969 he was allotted $1 million for the ARPANET project to make it work.
+                    Larry Roberts was recruited by Bob Taylor to manage the project. Larry had built the first network between 2 computers at MIT.
+                    They decided on using small computers to connect the big computers to the network (Interface Message Processor – IMP). And they used packet switching technology.
+                    BBN built the IMPs.
+                    <p>By 1969 they had the IMPs working and the IMP software "mostly" working. But they had reached the deadline and had to test the system. They did a basic test of sending one packet between 2 computers on the ARPANET and it worked! ARPANET launched the world's first successful packet-switched wide area computer network.
+                    By the end of 1969 they had all 4 computers sending packets across the network.</p>
+                    <p>But there was no practical use for the ARPANET until in December, 1970, Dr. Steve Crocker completed the Network Control Protocol (NCP), which was the original host-to-host protocol for the ARPANET. With NPC they could send files and data across the network.
+                    By 1971 the ARPAnet had 18 mainframe computers across the country.</p>
                 </div>
             </section>
             <section id="section2">
-                <h2>Sputnik and the Soviet Threat</h2>
+                <h2>The First Killer App</h2>
                 <div class="hoverwrap">
-                    <img src="images/sputnik_cc.JPG" alt="This is a picture of Sputnik satellite"/>
-                    <div class="hovermsg"><a href="https://www.flickr.com/photos/26244825@N05/8052668653">"Sputnik-1"</a> by <a href="https://www.flickr.com/photos/26244825@N05"> paukrus</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
+                    <img src="images/email_cc.JPG" alt="This is a picture of email"/>
+                    <div class="hovermsg"><a href="https://www.flickr.com/photos/18090920@N07/5167671844">"email"</a> by <a href="https://www.flickr.com/photos/18090920@N07">Sean MacEntee</a> is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/?ref=ccsearch&atype=rich">CC BY-NC-ND 2.0</a> </div>
                 </div>
                 <div class="sectionText">
-                    <p>In 1957 soviets launched Sputnik, which showed their technical superiority.
-                       This scared President Eisenhower. To catch up, president Eisenhower created ARPA (Advanced Research Projects Agency) in 1958. The purpose of ARPA was to form and execute research and development projects which would expand the frontiers of science and push the military technologies far into the future. After NASA was created, ARPA was able to focus on defense, an important part of which was retaliation. They needed a decentralized extended network that could survive a bombing attack.</p>
-                    <p>Telephone system used centralized hard connections, which could easily be disabled by a bomb taking out a key switch-point. Without communications the United States could not retaliate.</p>
+                    <p>Even with 18 sites on the ARPANET, there weren't many users on the system. There was no other use for ARPANET other than sending and receiving data files to analyze.</p>
+                    <p>This changed in 1971 when Raymond Tomlinson developed the first "killer" app, email. He came up with the idea to use the @ sign to separate the persons name and the host computer. Email was something that everyone could use, and it was a great way to quickly get information back and forth. The Internet Hall of Fame says that, "Tomlinson's email program brought about a complete revolution, fundamentally changing the way people communicate".</p>
+                    <p>In October, 1972 ARPA sponsored the first International Conference on Computers and Communication in Washingtion, DC. The purpose of this conference was to showcase the capabilities of the ARPANET. A Terminal Interface Processor was installed at the hotel, connected with a special telephone connection from AT&T. Connected to the Terminal Interface Processor were dozens of terminals spread around the conference hall.</p>
+                    <p>The demontration allowed the paticipants to interact with romote computer systems which included an air traffic control system and playing computer chess.
+                       The ICCC was a huge success. Before the end of 1972 there were 37 computers on the network.</p>
                 </div>
             </section>
             <section id="section3">
@@ -70,10 +77,10 @@
             </div>
         </aside>
         <aside>
-            <h3>The History of Computing Video</h3>
-            <img src="images/history_of_computing_video.JPG" alt="This is a picture of computing origins"/>
+            <h3>Celebration of the Life of Robert W. Taylor Video</h3>
+            <img src="images/robert_taylor_video.JPG" alt="This is a picture of Robert Taylor"/>
             <div>
-                <a href="https://www.youtube.com/watch?v=-M6lANfzFsM">The History of Computing</a> is an interesting look at early computing.
+                <a href="https://www.youtube.com/watch?v=7LpU3JuSElY">Celebration of the Life of Robert W. Taylor</a> is an in depth look at the contribution that Bob Taylor had on the development of the ARPANET and later the internet.
             </div>
         </aside>
         <aside>
