--- a/public_html/index.html
+++ b/public_html/index.html
@@ -179,7 +179,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="pre-internet.html">Pre-Internet</a></li>
-        <li><a href="index.html">Z-Page</a></li>
+        <li><a href="arpa-net.html">ARPA-NET</a></li>
     </menu>
     <div id ="heading">
         <h2>Explore The Interesting and Exciting History Of The Internet</h2>
